scss/components/compilationcard.scss
@keyframes mymove {
  0% {background-color: var(--color-grey5);}
  50% {background-color: var(--color-grey1);}
  100% {background-color: var(--color-grey5);}
}

@keyframes fadein {
  from { opacity: 0; }
  to { opacity: 1; }
}

.games {
  overflow: hidden;
}

.compilationcardlist {
  display: flex;
  position: relative;
  justify-content: space-between;
  overflow-x: auto;
  padding: 10px;
  transition: all 1.5s ease 0s;

  &::-webkit-scrollbar {
    display: none;
  }
}

%c {
  width: 30%;
  height: 200px;
  margin: 1vw;
  flex-grow: 0;
  flex-shrink: 0;
}

.compilationcard {
  @extend %c;
  min-width: 146px;
  background: var(--color-grey4);

  &:nth-child(1) {
    margin-left: 0;
  }

  display: flex;
  flex-direction: column;

  $anim: 0.5s;

  position: relative;

  animation-delay: 0 !important;

  border: solid 1px var(--color-grey4);
  background: var(--color-grey4);
  box-shadow: 3px 3px 5px rgba(0,0,0,0.3);

  width: 60%;

  transition: transform $anim ease 0s, box-shadow 2s;
  overflow: hidden;

  span:first-child {
    flex-basis: 70% !important;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;

    img {
      width: 90px;
      height: 115px;

      object-fit:cover;
      margin: 10px;
    }
  }

   &__title {
     flex-grow: 2;
     background: var(--color-grey3);

     display: flex;
     justify-content: center;
     align-items: center;

     div {
       text-align: center;
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       max-width: 80%;
       overflow: hidden;
     }
  }
}
.compilationcard__wrapper {
  perspective: 500px;
  perspective-origin: center;

  &:first-child {
    margin-left: 0;
  }
}

.compilationcard--skeleton {
  @extend %c;
  background: var(--color-grey3);
  animation: mymove 2s infinite;
  animation-timing-function: ease-in-out;
  // visibility: hidden;
}

.compilationcard--primary {
  display: flex;
  justify-content: center;
  > * {
    padding: 0;
  }

  section > * {
    margin-bottom: 0.5rem;
  }

  h2 {
    margin-bottom: 0rem;
  }
}

.compilationcard__meta {
  color: var(--color-grey2);
  display: block;
}

//
@media only screen and (min-width: $breakpoint-lg) {
  .compilationcardlist {
    overflow: hidden;
  }
}

@media only screen and (min-width: 328px) {
  .compilationcard__wrapper, .compilationcard--skeleton { width: 70%; }
}
@media only screen and (min-width: 500px) {
  // .compilationcard__wrapper, .compilationcard--skeleton { width: 35%; }
}
@media only screen and (min-width: 650px) {
  .compilationcard__wrapper, .compilationcard--skeleton { width: 26%; }
}
@media only screen and (min-width: 1200px) {
  .compilationcard__wrapper, .compilationcard--skeleton { width: calc(1152px / 8); margin: 10px; }
}

/* Glossiness and 3d rotation only added to devices capable of hover-functionality */

@media (hover : hover) {
  .compilationcard {
    &::before {
      top: 5rem;
      bottom: 0%;
      left: -5rem;
      right: -5rem;
      top: -5rem;
      bottom: 100%;
      position: absolute;
      background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.15) 8%);
      transform: rotate(-35deg);
      transition: bottom 1.25s ;
      content: "";
    }

    &:hover {
      &::before {
        bottom: 70%;
      }
      transform: rotate3d(1, 0,0, 20deg);
      box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
    }

  }

}

